fixed start button margin so it is not glued to footer on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -579,7 +579,7 @@ footer a:hover {
   justify-content: center;
   align-items: center;
   flex-basis: 100%;
-  margin-top: 20px;
+  margin: 20px 0;
   gap: 40px;
 }
 .landing .wrapper button {
