--- a/src/sass/partial/_landingpage.scss
+++ b/src/sass/partial/_landingpage.scss
@@ -57,7 +57,7 @@
         justify-content: center;
         align-items: center;
         flex-basis: 100%;
-        margin-top: 20px;
+        margin: 20px 0;
         gap: 40px;
       }
   
